load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.program_options",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
        "include/**/*.ipp",
    ]),
    srcs = glob(["src/**/*.cpp", "src/**/*.ipp"]),
    includes = ["include"],
    deps = [
        "@boost.any",
        "@boost.bind",
        "@boost.config",
        "@boost.core",
        "@boost.detail",
        "@boost.function",
        "@boost.iterator",
        "@boost.lexical_cast",
        "@boost.smart_ptr",
        "@boost.static_assert",
        "@boost.throw_exception",
        "@boost.tokenizer",
        "@boost.type_traits",
    ],
)
